<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="10dp"
    tools:context="com.example.android.tic_tac_toebyaustine.MainActivity">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/onePlayerBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:clickable="false"
            android:text="@string/one_player"
            android:textAppearance="?android:textAppearanceMedium"
            android:background="@color/colorAccent"
            android:textColor="@color/background" />


        <Button
            android:id="@+id/twoPlayersBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/two_players"
            android:textAppearance="?android:textAppearanceMedium"
            android:background="@color/colorAccent" />
    </LinearLayout>

    <Button
        android:id="@+id/threeByThreeOneBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/ll"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/threeByThree"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="italic"
        android:visibility="invisible"
        android:background="@color/colorAccent"
        android:textColor="@color/background"
        android:onClick="splay_3x3" />

    <Button
        android:id="@+id/fiveByFiveOneBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/threeByThreeOneBtn"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/fiveByFive"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="italic"
        android:visibility="invisible"
        android:background="@color/colorAccent"
        android:textColor="@color/background"
        android:onClick="splay_5x5"/>


    <Button
        android:id="@+id/threeByThreeTwoBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/ll"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/threeByThree"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="italic"
        android:visibility="visible"
        android:background="@color/colorAccent"
        android:textColor="@color/background"
        android:onClick="mplay_3x3" />

    <Button
        android:id="@+id/fiveByFiveTwoBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/threeByThreeTwoBtn"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/fiveByFive"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="italic"
        android:visibility="visible"
        android:background="@color/colorAccent"
        android:textColor="@color/background"
        android:onClick="mplay_5x5" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_above="@id/about_btn"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:onClick="scoreboard"
        android:padding="10dp"
        android:text="@string/scoreboard"
        android:textColor="@color/background"
        android:textAppearance="?android:textAppearanceLarge"/>

    <Button
        android:id="@+id/about_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/exit_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/about"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/background" />

    <Button
        android:id="@+id/exit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:onClick="exit_click"
        android:text="@string/exit"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/background" />

</RelativeLayout>
